--- a/index.html
+++ b/index.html
@@ -75,10 +75,29 @@
 		</div>
 	</div>
 	<!--首屏 / s-->
-	<!--第二页 / s-->
-	<!--第二页 / s-->
-	<!--loading / s-->
-	<!--loading / s-->
+	<!--探索 / s-->
+	<div class="search-page ab">
+		<div class="bg">
+			<div class="vaseline ab">
+				<img src="images/vaseline_2.png" style="width:100%;height:100%;">
+			</div>
+			<div class="vaseline_logo ab">
+				<img src="images/star2.png" class="star2 ab">
+				<img src="images/hand.png" class="ab hand">
+			</div>
+			<div class="tip ab"></div>
+		</div>
+		<div class="cloud ab"></div>
+		<div class="cup ab"></div>
+	</div>
+	<!--探索 / e-->
+	<!--扫描 / s-->
+	<div class="scan ab">
+		<div class="title"></div>
+		<div class="scan-box"></div>
+		<div class="explore"></div>
+	</div>
+	<!--扫描 / e-->
 	<!--loading / s-->
 	<!--loading / s-->
 	<!--loading / s-->
