--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 	<title>vaseline</title>
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	
+	<link rel="stylesheet" href="http://p5.yokacdn.com/pic/div/2015/topic/06/nzz/css/swiper.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	
 </head>
 <body>
 	<!--loading / s-->
@@ -93,30 +92,63 @@
 	<!--探索 / e-->
 	<!--扫描 / s-->
 	<div class="scan ab">
-		<div class="title"></div>
-		<div class="scan-box"></div>
-		<div class="explore"></div>
+		<div class="title ab"></div>
+		<div class="scan-box ab">
+			<div class="k"></div>
+			<div class="kl ab"></div>
+		</div>
+		<div class="explore ab"></div>
 	</div>
 	<!--扫描 / e-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
-	<!--loading / s-->
+	<div class="swiper-container" id="swiper">
+		<div class="swiper-wrapper">
+			<!--product / s-->
+			<div class="swiper-slide" id="product">
+				<div class="pst"></div>
+				<div class="title ab">
+					<img src="images/pt.png" alt="">
+				</div>
+				<div class="productPic">
+					<img src="images/pd.png" alt="">
+					<div class="view"></div>
+				</div>
+				<div class="reason">
+					<div class="reason-content">
+						<img src="images/reason.png" alt="">
+						<div class="close"></div>
+					</div>
+				</div>
+				<div class="arrow"></div>
+			</div>
+			<!--product / e-->
+			<!--wish / s-->
+			<div class="swiper-slide" id="wish">
+				<div class="wishstar"></div>
+				<div class="lx lx1"></div>
+				<div class="lx lx2"></div>
+				<div class="lx lx3"></div>
+				<div class="bs"></div>
+				<div class="logo"></div>
+				<div class="share"></div>
+				<div class="wishtitle">
+					<img src="images/wishlogo.png" alt="">
+				</div>
+				<div class="form">
+					<p>恭喜你成功探索了Vaseline星球</p>
+					<p>许个愿吧~有机会获得神秘礼盒</p>
+					<div class="formitem">姓名：<input type="text"></div>
+					<div class="formitem">电话：<input type="tel"></div>
+					<div class="formitem">愿望：<textarea></textarea></div>
+				</div>
+				<div class="wishbtn"></div>
+			</div>
+			<!--wish / e-->
+		</div>
+		
+	</div>
 	<script type="text/javascript" src="http://p5.yokacdn.com/pic/div/2015/topic/06/nzz/js/jquery-2.1.1.min.js"></script>
 	<script src="js/preloader.min.js"></script>
+	<script src="js/swiper.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
