--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<div class="yun yun7 ab"></div>
 		</div>
 		<div class="cup ab"></div>
-		<div class="brands ab on">
+		<div class="brands ab">
 			<div class="light-content ab">
 				<div class="light light1 ab"></div>
 				<div class="light light2 ab"></div>
@@ -80,10 +80,11 @@
 			<div class="vaseline ab">
 				<img src="images/vaseline_2.png" style="width:100%;height:100%;">
 			</div>
-			<div class="vaseline_logo ab">
+			<div class="vaseline_tip ab">
 				<img src="images/star2.png" class="star2 ab">
 				<img src="images/hand.png" class="ab hand">
 			</div>
+			<div class="vaseline_logo ab"></div>
 			<div class="tip ab"></div>
 		</div>
 		<div class="cloud ab"></div>
@@ -94,6 +95,7 @@
 	<div class="scan ab">
 		<div class="title ab"></div>
 		<div class="scan-box ab">
+			<p>扫描中...</p>
 			<div class="k"></div>
 			<div class="kl ab"></div>
 		</div>
@@ -150,5 +152,25 @@
 	<script src="js/preloader.min.js"></script>
 	<script src="js/swiper.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
+	<script>
+		function addUser(){
+			var url = "http://www.cosmopolitan.com.cn/files/eventapi.php?c=EventApiNew&a=AddEvent&indexsId=617";  
+
+			var data = { 
+				"data[2473]": "13031652989",//手机 
+				"data[2474]": "kevin2",//真实姓名 
+				"data[2475]": "test wish",//願望
+			};
+			$.ajax({
+				url:url,
+				data:data,
+				type:"GET",
+				success:function(reqData){
+					console.log(reqData)
+				}
+			});
+		}
+		//addUser();
+	</script>
 </body>
 </html>
