--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <body>
 	<!--loading / s-->
 	<div class="loading ab">
-		<div class="bg ab">
-			<img src="images/loading.png" alt="">
-		</div>
+		<div class="bg bg1 ab"></div>
+		<div class="bg bg2 ab"></div>
+		<div class="bg bg3 ab"></div>
 		<div class="star ab"></div>
 		<div class="title ab">
 			<img src="images/title.png" alt="">
