--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
 	<!--探索 / s-->
 	<div class="search-page ab">
 		<div class="bg">
+			<div class="bgs bgs1"></div>
+			<div class="bgs bgs2"></div>
+			<div class="bgs bgs3"></div>
 			<div class="vaseline ab">
-				<img src="images/vaseline_2.png" style="width:100%;height:100%;">
+				<img src="images/vaseline_s2.png" style="width:100%;height:100%;">
 			</div>
 			<div class="vaseline_tip ab">
 				<img src="images/star2.png" class="star2 ab">
@@ -100,7 +103,8 @@
 				<div class="scan ab">
 					<div class="title ab"></div>
 					<div class="scan-box ab">
-						<p>扫描中...</p>
+						<img src="images/lk.png" alt="">
+						<!-- <p>扫描中...</p> -->
 						<div class="k"></div>
 						<div class="kl ab"></div>
 					</div>
@@ -108,7 +112,7 @@
 				</div>
 				<!--扫描 / e-->
 				<!--product / s-->
-				<div id="product">
+				<div id="product" class="ab">
 					<div class="pst"></div>
 					<div class="title ab">
 						<img src="images/pt.png" alt="">
