--- a/index.html
+++ b/index.html
@@ -77,12 +77,16 @@
 	<!--首屏 / s-->
 	<!--探索 / s-->
 	<div class="search-page ab">
+		<div class="cab"></div>
+		<canvas id="canvas"></canvas>
 		<div class="bg">
-			<div class="bgs bgs1"></div>
+			<!-- <div class="bgs bgs1"></div>
 			<div class="bgs bgs2"></div>
-			<div class="bgs bgs3"></div>
+			<div class="bgs bgs3"></div> -->
 			<div class="vaseline ab">
-				<img src="images/vaseline_s2.png" style="width:100%;height:100%;">
+				<img src="images/vaseline_s.png" id="vs">
+				<img src="images/sl.png" id="sl">
+				<img src="images/vaseline_s1.png" id="vs1">
 			</div>
 			<div class="vaseline_tip ab">
 				<img src="images/star2.png" class="star2 ab">
@@ -90,7 +94,9 @@
 			</div>
 			<div class="vaseline_logo ab"></div>
 			<div class="tip ab"></div>
+			
 		</div>
+
 		<div class="cloud ab"></div>
 		<div class="cup ab"></div>
 	</div>
