--- a/test.html
+++ b/test.html
@@ -2,143 +2,183 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>逼真的雪花飘落特效</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 
-<style type="text/css">
-body{background-color:#000044;background:url(http://www.17sucai.com/preview/71517/2014-02-14/index/images/bg.jpg) repeat-x;margin:0px;overflow:hidden;}
-a{color:#0078ff;}
-</style>
+<title>iScroll demo: starfield</title>
 
-</head>
-
-<body onLoad="init()">
-
-<script type="text/javascript" src="http://www.17sucai.com/preview/71517/2014-02-14/index/js/ThreeCanvas.js"></script>
-<script type="text/javascript" src="http://www.17sucai.com/preview/71517/2014-02-14/index/js/Snow.js"></script>
+<script type="text/javascript" src="http://lab.cubiq.org/iscroll5/build/iscroll.js"></script>
+<link rel="stylesheet" href="css/style.css">
 <script type="text/javascript">
+var phoneWidth =  parseInt(window.screen.width);
+		var phoneScale = phoneWidth/640;
+		var ua = navigator.userAgent;
+		if (/Android (\d+\.\d+)/.test(ua)){
+			var version = parseFloat(RegExp.$1);
+			if(version>2.3){
+				document.write('<meta name="viewport" content="width=640, minimum-scale = '+phoneScale+', maximum-scale = '+phoneScale+', target-densitydpi=device-dpi">');
+			}else{
+				document.write('<meta name="viewport" content="width=640, target-densitydpi=device-dpi">');
+			}
+		} else {
+			document.write('<meta name="viewport" content="width=640, user-scalable=no, target-densitydpi=device-dpi">');
+		}
+var myScroll;
 
-var SCREEN_WIDTH = window.innerWidth;
-var SCREEN_HEIGHT = window.innerHeight;
-
-var container;
-
-var particle;
-
-var camera;
-var scene;
-var renderer;
-
-var mouseX = 0;
-var mouseY = 0;
-
-var windowHalfX = window.innerWidth / 2;
-var windowHalfY = window.innerHeight / 2;
-
-var particles = []; 
-var particleImage = new Image();//THREE.ImageUtils.loadTexture( "img/ParticleSmoke.png" );
-particleImage.src = 'http://www.17sucai.com/preview/71517/2014-02-14/index/images/ParticleSmoke.png'; 
-
-
-
-function init() {
-
-	container = document.createElement('div');
-	document.body.appendChild(container);
-
-	camera = new THREE.PerspectiveCamera( 75, SCREEN_WIDTH / SCREEN_HEIGHT, 1, 10000 );
-	camera.position.z = 1000;
-
-	scene = new THREE.Scene();
-	scene.add(camera);
-		
-	renderer = new THREE.CanvasRenderer();
-	renderer.setSize(SCREEN_WIDTH, SCREEN_HEIGHT);
-	var material = new THREE.ParticleBasicMaterial( { map: new THREE.Texture(particleImage) } );
-		
-	for (var i = 0; i < 500; i++) {
-
-		particle = new Particle3D( material);
-		particle.position.x = Math.random() * 2000 - 1000;
-		particle.position.y = Math.random() * 2000 - 1000;
-		particle.position.z = Math.random() * 2000 - 1000;
-		particle.scale.x = particle.scale.y =  1;
-		scene.add( particle );
-		
-		particles.push(particle); 
-	}
-
-	container.appendChild( renderer.domElement );
-
-
-	document.addEventListener( 'mousemove', onDocumentMouseMove, false );
-	document.addEventListener( 'touchstart', onDocumentTouchStart, false );
-	document.addEventListener( 'touchmove', onDocumentTouchMove, false );
-	
-	setInterval( loop, 1000 / 60 );
-	
+function loaded () {
+	myScroll = new IScroll('#wrapper', {
+		mouseWheel: true,scrollX: true, freeScroll: true ,
+		indicators: [{
+			el: document.getElementById('starfield1'),
+			resize: false,
+			ignoreBoundaries: true,
+			speedRatioY: 0.4,
+			speedRatioX: 0.4
+		}, {
+			el: document.getElementById('starfield2'),
+			resize: false,
+			ignoreBoundaries: true,
+			speedRatioY: 0.8,
+			speedRatioX: 0.8
+		}]
+	});
 }
 
-function onDocumentMouseMove( event ) {
-
-	mouseX = event.clientX - windowHalfX;
-	mouseY = event.clientY - windowHalfY;
-}
-
-function onDocumentTouchStart( event ) {
-
-	if ( event.touches.length == 1 ) {
-
-		event.preventDefault();
-
-		mouseX = event.touches[ 0 ].pageX - windowHalfX;
-		mouseY = event.touches[ 0 ].pageY - windowHalfY;
-	}
-}
-
-function onDocumentTouchMove( event ) {
-
-	if ( event.touches.length == 1 ) {
-
-		event.preventDefault();
-
-		mouseX = event.touches[ 0 ].pageX - windowHalfX;
-		mouseY = event.touches[ 0 ].pageY - windowHalfY;
-	}
-}
-
-//
-
-function loop() {
-
-for(var i = 0; i<particles.length; i++)
-	{
-
-		var particle = particles[i]; 
-		particle.updatePhysics(); 
-
-		with(particle.position)
-		{
-			if(y<-1000) y+=2000; 
-			if(x>1000) x-=2000; 
-			else if(x<-1000) x+=2000; 
-			if(z>1000) z-=2000; 
-			else if(z<-1000) z+=2000; 
-		}				
-	}
-
-	camera.position.x += ( mouseX - camera.position.x ) * 0.05;
-	camera.position.y += ( - mouseY - camera.position.y ) * 0.05;
-	camera.lookAt(scene.position); 
-
-	renderer.render( scene, camera );
-
-	
-}
+document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
 
 </script>
 
-<div style="text-align:center;clear:both"></div>
+<style type="text/css">
+/* * {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+html {
+	-ms-touch-action: none;
+}
+
+body,ul,li {
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+
+body {
+	font-size: 12px;
+	font-family: ubuntu, helvetica, arial;
+	overflow: hidden; this is important to prevent the whole page to bounce
+	background: #000;height:1008px;
+}
+
+#wrapper {
+	position: absolute;
+	z-index: 3;
+	width: 100%;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	overflow: hidden;
+}
+
+#scroller {
+	position: absolute;
+	z-index: 3;
+	width: 3520px;
+	height: 6808px;
+	overflow: hidden;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+	-ms-text-size-adjust: none;
+	-o-text-size-adjust: none;
+	text-size-adjust: none;
+	background: url(images/us.png) repeat;
+}
+
+.starfield {
+	position: absolute;
+	width: 100%;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	overflow: hidden;
+}
+
+.starfield div {
+	position: absolute;
+	width: 100%;
+	overflow: hidden;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+}
+
+#starfield1 {
+	z-index: 2;
+}
+
+#stars1 {
+	z-index: 1;width:1920px;
+	height: 3408px;
+	background: url(images/bigbg.jpg) no-repeat;
+} */
+
+/* #starfield2 {
+	z-index: 1;
+}
+
+#stars2 {
+	z-index: 1;
+	width:1000px;
+	height: 2000px;
+	background: url(images/us.png) repeat;
+} */
+
+</style>
+</head>
+<body onload="loaded()">
+
+<div class="search-page ab" style="display:block">
+	<div id="wrapper">
+		<div id="scroller">
+			<div class="vaseline ab">
+				<img src="images/vaseline_s.png" id="vs">
+				<img src="images/sl.png" id="sl">
+				<img src="images/vaseline_s1.png" id="vs1">
+			</div>
+			<div class="vaseline_tip ab">
+				<img src="images/star2.png" class="star2 ab">
+				<img src="images/hand.png" class="ab hand">
+			</div>
+			<div class="vaseline_logo ab"></div>
+			<div class="tip ab"></div>
+		</div>
+	</div>
+
+	<div class="starfield" id="starfield1">
+		<div id="stars1"></div>
+	</div>
+
+	<div class="starfield" id="starfield2">
+		<div id="stars2"></div>
+	</div>
+	<div class="cloud ab"></div>
+	<div class="cup ab"></div>
+</div>
 
 </body>
 </html>
