--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 				</div>
 				<p class="wishsucc">
 					<img src="images/share2.png" alt="">
-					还等什么？快将星愿点亮，<br>把凡士林神秘礼盒带走吧！
+					还等什么？快将星愿点亮,<br>把凡士林神秘礼盒带走吧!
 				</p>
 				<div class="wishbtn"></div>
 			</div>
