--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 				</div>
 				<p class="wishsucc">
 					<img src="images/share2.png" alt="">
-					还等什么？快将星愿点亮,<br>把凡士林神秘礼盒带走吧!
+					快点亮星愿,带走凡士林星愿礼盒!<br>在COSMO 2015美容大奖年度手霜的<br>保驾护航中,开启你的美手修护之旅!
 				</p>
 				<div class="wishbtn"></div>
 			</div>
