--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				</div>
 				<div class="form">
 					<p>恭喜你成功探索了Vaseline星球</p>
-					<p>许个愿吧~有机会获得神秘礼盒</p>
+					<p>许个愿吧~有机会获得星愿礼盒</p>
 					<div class="formitem">姓名：<input type="text" id="form_name"></div>
 					<div class="formitem">电话：<input type="tel" id="form_tel"></div>
 					<div class="formitem txt"><span>愿望：</span><textarea id="form_wish"></textarea></div>
